# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  color.h  hittable.h  material.h  raytracer.h  sphere.h  vec3.h
src/: main.cpp
